--- a/workshop2_solutions.html
+++ b/workshop2_solutions.html
@@ -47,7 +47,7 @@
             // DEMO, we can also write IMG -tags
             // and other content which is loaded from the web
             document.write("<img src='https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcRnolDrUSX-NZBCKTjPLoliz1NLTFzQ2zZMM_Pz6x91A8mwz34r'>");
-
+            document.write('<table border="1"><tr><td>Hello World</td></tr></table>');
             // EX. 2
             function repeatingText() {
                 for (var i=0; i < 50; i++){
@@ -110,7 +110,7 @@
 
             document.write("<img src='https://cdn-images-1.medium.com/max/1600/1*ot7tWiPCYC01pV0kGmK3qQ.png'>");
 
-            document.images[1].src = images[number];
+            document.images[0].src = images[number];
 		</script>
 	</body>
 </html>
