--- a/workshop3_solutions.html
+++ b/workshop3_solutions.html
@@ -94,7 +94,7 @@ over&nbsp;it. Output "Stepped over my a mouse!" on the console.</li>
 		</p>
 		<p id="table-here2"</p>
 		<script>
-            <!-- JavaScript goes here -->
+            //-- JavaScript goes here -->
             // This counter is used to keep in track of the keypresses
             // It has to be declared here, so that it doesnt get reset on every keypress
             var counter= 0;
