--- a/workshop8_solutions.html
+++ b/workshop8_solutions.html
@@ -52,7 +52,7 @@
             <li>When you have completed this, add functionality to an input field, in which the user can write search queries which are sent to the OpenWeatherMap API and the system will run a search query which is retuned to your app.</li>
         </ul>
         <p>Select a city from the list:
-        <select name="mySelect" id="city" onchange="">
+        <select name="mySelect" id="city" onchange="weatherSearch()">
             <option value="Helsinki">Helsinki</option>
             <option value="Stockholm">Stockholm</option>
             <option value="Rome">Rome</option>
@@ -95,8 +95,11 @@
                     document.getElementById('jsondata').innerHTML += firstName + " " + lastName + "<br>";
                 } // end for
                 // EX2: If the CORS-issue is preventing the data to be loaded, we can just use local variable
+				}
+				var JSONdata;
                 function loadJSONdata(){
-                    var data = [
+					//alert("Taalla");
+                    JSONdata = [
                         {
                             "_id": "58297a7e5ce6837d92edd2ee",
                             "index": 0,
@@ -384,17 +387,20 @@
                         }
                     ];
                 }
-            }
+            
             // If CORS-issue is fine (IE seems to work), we can fetch the data using AJAX
             // Define a variable which can be used globally
             var jsonObj;
             function loadJSONDoc() {
-                var url = "http://iceberg-cycle.codio.io/Project%202:%20Weather%20App/sampledata.js";
+				//alert("Doc");
+                //var url = "http://api.openweathermap.org/data/2.5/weather?q=Kirkkonummi&appid=7cc51fa62b0b257066d44923817d4830";
+				var url = "http://iceberg-cycle.codio.io/Project%202:%20Weather%20App/sampledata.js";
                 var xmlhttp = new XMLHttpRequest();
                 xmlhttp.open("GET", url, true);
                 xmlhttp.send();
                 xmlhttp.onreadystatechange = function() {
                     if (xmlhttp.readyState == 4 && xmlhttp.status == 200) {
+						//alert("DOC jatkuu");
                         document.getElementById("rawdata").innerHTML = xmlhttp.responseText;
                         // Receive the response as JSON and parse it into a JS variable
                         jsonObj = JSON.parse(xmlhttp.responseText);
@@ -403,10 +409,14 @@
                         console.log ( jsonObj[3].age );
                         // Just output the raw data
                         document.getElementById("rawdata").innerHTML = xmlhttp.responseText;
-                    }
+                    } 
                 }
+				// alert("Docdata jatkuu");
+				loadJSONdata();
+				document.getElementById("rawdata").innerHTML = JSONdata;
             }
             function loadJSONDocWithParse() {
+				//alert("Parse");
                 var url = "http://iceberg-cycle.codio.io/Project%202:%20Weather%20App/sampledata.js";
                 var xmlhttp = new XMLHttpRequest();
                 xmlhttp.open("GET", url, true);
@@ -421,6 +431,7 @@
                     }
 
                 }
+				printJSONTable(JSONdata);
             }
             function printJSONTable(jsonObj) {
                 // JSON data is stored in data variable
@@ -444,6 +455,47 @@
                 // Place the newly created table in tabledata-div
                 document.getElementById("rawdata").innerHTML = out;
             }
+
+            function printJSONWeatherTable(jsonObj) {
+                // JSON data is stored in data variable
+                var data = jsonObj;
+                // Create a loop, which will run through the JSON data array. All the data will be collected to out -variable
+                var out = "<table>";
+                for (var i=0; i < data.length; i++){
+                    // for each loop round, we will create a new table for <tr> -tag and append (+=) the data to existing out -variable
+                    out += '<tr>';
+                    // For each cell, we will output data fields from JSON
+                    out += '<td>' + data[i].coord + '</td>';
+                    out += '<td>' + data[i].main + '</td>';
+                    out += '<td>' + data[i].sys+ '</td>';
+                    out += '<td>' + data[i].weather + '</td>';
+                    //out += '<td>' + data[i].picture + '</td>';
+                    //out += '<td><img src="'+ data[i].picture+'"></td>';
+                    out += '</tr>';
+                }
+                // After all the data has been set, we will output closing tag for the table
+                out+="</table>";
+                // Place the newly created table in tabledata-div
+                document.getElementById("weatherdata").innerHTML = out;
+            }
+            function weatherSearch(){
+                var selection = document.getElementById("city");
+                var city = selection.options[selection.selectedIndex].value;
+                var url = "http://api.openweathermap.org/data/2.5/weather?q="+city+"&units=metric&mode=JSON&APPID=ff64c247a136f706923d1ee0d55d71e2";
+                var xmlhttp = new XMLHttpRequest();
+                xmlhttp.open("GET", url, true);
+                xmlhttp.send();
+                xmlhttp.onreadystatechange = function() {
+                    if (xmlhttp.readyState == 4 && xmlhttp.status == 200) {
+                        //	document.getElementById("content").innerHTML = xmlhttp.responseText;
+                        jsonObj = JSON.parse(xmlhttp.responseText);
+                        console.log(jsonObj);
+                        // Call for a function which will parse the data to a table
+                        printJSONWeatherTable(jsonObj);
+                    }
+                }
+            }
+
         </script>
     </body>
 </html>
