--- a/workshop7_solution.html
+++ b/workshop7_solution.html
@@ -109,9 +109,9 @@
 		<p>Next try fetching data from a web service. Use either Yahoo news feed  <a href="https://meijastiina.github.io/news_rss_topstories.xml" target="_blank">https://meijastiina.github.io/news_rss_topstories.xml</a> (downloaded from <a href="https://news.yahoo.com/rss/topstories" target="_blank">https://news.yahoo.com/rss/topstories</a>, security restriction do not allow sending AJAX calls to Yahoo) or a Finnish one (<a href="http://www.iltalehti.fi/rss/uutiset.xml" target="_blank">http://www.iltalehti.fi/rss/uutiset.xml</a>).</p>
 		<p>Parse the results and display on page below as a list. You can add link to the original news item as well.</p>
 		<ul>
-			<li><a href="#">News heading </a></li>
+			<li><a href="https://meijastiina.github.io/news_rss_topstories.xml">News_rss_topstories </a></li>
 		</ul>
-		<input type="button" name="Fetch3" id="Fetch3b" value="Load YAHOO newsfeed" onclick="loadAndParseNews('https://meijastiina.github.io/news_rss_topstories.xml')">
+		<input type="button" name="Fetch3" id="Fetch3b" value="Load YAHOO newsfeed" onclick="loadAndParseNews('https://news.yahoo.com/rss/topstories')">
 		<input type="button" name="Fetch3" id="Fetch3c" value="Load Iltalehti Newsfeed" onclick="loadAndParseNews('http://www.iltalehti.fi/rss/uutiset.xml')">
 		<div id="newsfeed">
 		</div>
