Some error corrections

--- a/workshop8_solutions.html
+++ b/workshop8_solutions.html
@@ -58,10 +58,10 @@
             <option value="Rome">Rome</option>
             <option value="New York">New York</option>
          </select></p>
-        <p>Or type in a search query: <input id="citysearch"></input><button id="search">Search</button></p>
+        <p>Or type in a search query: <input id="citysearch"><button id="search">Search</button></p>
         <div id="weatherdata">Weatherdata goes here.</div>
         <script>
-            <!-- JavaScript goes here -->
+            // JavaScript goes here
             // EX1
             function displayName(){
                 // Data as text in JSON format
